--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -2,7 +2,14 @@
 
 * {
     font-family: Helvetica, Arial, sans-serif;
-    background-color: v.$primario;
+
+    background: hsla(354, 95%, 24%, 1);
+
+    background: linear-gradient(90deg, hsla(354, 95%, 24%, 1) 0%, hsla(234, 70%, 24%, 1) 100%);
+    
+   
+    
+    
   }
   
   body {
