--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,8 +9,8 @@ $desktop: 1024px;
 
 // Colores
 $primario: #1B1B1E;
-$secundario: #e082a8; 
 $negro: #000;
 $blanco: #FFFFFF;
 $gris: #979797;
 $grisClaro: #f8f8f8;
+$gradiante: radial-gradient(circle, rgba(135,10,122,1) 0%, rgba(5,7,9,1) 100%);
