--- a/src/scss/ui/header/_input.scss
+++ b/src/scss/ui/header/_input.scss
@@ -5,7 +5,7 @@
     background-color: white;
     border-radius: 5px;
     border: 1px solid rgb(97, 32, 158);
-    color: v.$blanco;
+    color: v.$negro;
     font-size: 1.2rem;
     outline: none;
     padding: 10px 15px;
