--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -2,18 +2,12 @@
 
 * {
     font-family: Helvetica, Arial, sans-serif;
-
-    background: hsla(354, 95%, 24%, 1);
-
-    background: linear-gradient(90deg, hsla(354, 95%, 24%, 1) 0%, hsla(234, 70%, 24%, 1) 100%);
-    
    
-    
-    
   }
   
   body {
     padding: 60px;
+    background: v.$gradiante;
   }
 
   h2 {
@@ -28,38 +22,3 @@
   button{
     margin-top: 20px;
   }
-  
-  // .card-grid {
-  //   display: flex;
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
-  //   justify-content: center;
-  // }
-  
-  // .card {
-  //   align-content: center;
-  //   align-items: center;
-  //   background-color: white;
-  //   border-radius: 10px;
-  //   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.03);
-  //   display: flex;
-  //   flex-direction: column;
-  //   height: 0%;  
-  //   justify-content: center;
-  //   margin-bottom: 20px;
-  //   margin-right: 20px;
-  //   overflow: hidden;
-  // }
-  
-  // .card p {
-  //   background-color: white;
-  //   flex: 1;
-  //   font-size: 1.5rem;
-  //   margin-top: 5px;
-  //   padding: 5px 20px 0px 20px;
-  //   text-align: center;
-  // }
-  
-  // .card img {
-  //   width: 100%;
-  // }
