--- a/src/scss/ui/footer/_footer.scss
+++ b/src/scss/ui/footer/_footer.scss
@@ -13,9 +13,9 @@
 
 .redes{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3.5rem;
     
     @include mx.tablet{
         flex-direction: row;
