--- a/src/scss/ui/footer/_footer.scss
+++ b/src/scss/ui/footer/_footer.scss
@@ -8,6 +8,7 @@
     .copy{
         text-align: center;
         color: v.$blanco;
+        
     }
 }
 
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 3.5rem;
+    gap: 3rem;
     
     @include mx.tablet{
         flex-direction: row;
@@ -23,7 +24,12 @@
         gap: 2rem;
     }
     &__icono{
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
+
+        @include mx.tablet{
+            width: 30px;
+            height: 30px;
+        }
     }
 }
